# skillbox

./: .gitignore
13.6.1/: 13.6.1.sln
13.6.2/: 13.6.2.sln
13.6.3/: 13.6.3.sln
Anagrams/: Anagrams.sln
Birthday/: Birthday.sln
Calculator/: Calculator.sln
ConsoleApplication1/: ConsoleApplication1.sln
DesktopWindow/: CMakeLists.txt
Fractional number stitcher/: Fractional number stitcher.sln
Minecraft/: Minecraft.sln
OpSimulator/: CMakeLists.txt
OpSimulator/OpSimulator/src/: CMakeLists.txt  OpSimulator.cpp
Operations_Simulator/: CMakeLists.txt
Operations_Simulator/Operations_Simulator/: CMakeLists.txt  Operations_Simulator.cpp  Operations_Simulator.h  main.cpp
PC_Simulator/: CMakeLists.txt
PC_Simulator/PC_Simulator/: CMakeLists.txt
PC_Simulator/PC_Simulator/include/: cpu.h  disk.h  kbd.h  ram.h
PC_Simulator/PC_Simulator/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
PC_Simulator/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
Phonebook/: Phonebook.sln
RPG/: RPG.sln
Registry/: Registry.sln
Sorting/: Sorting.sln
Task_28_3/Task_28_3/: .gitignore  CMakeLists.txt  README.md  main.cpp
Task_28_3/Task_28_3/include/: CourierService.h  KitchenService.h  Order.h  Service.h  WaitersService.h
Task_28_3/Task_28_3/src/: CourierService.cpp  KitchenService.cpp  Order.cpp  Service.cpp  WaitersService.cpp
Tic-tac-toe2/: Tic-tac-toe2.sln
almost_minecraft/: almost_minecraft.sln
ans/: ans.sln
apartment_house/: apartment_house.sln
audio_player/: CMakeLists.txt
audio_player/audio_player/: CMakeLists.txt  audio_player.cpp  audio_player.h  main.cpp  playList.txt
audio_player_2.0/: CMakeLists.txt
audio_player_2.0/audio_player_2.0/: CMakeLists.txt  audio_player.cpp  audio_player.h  main.cpp
bankomat/: bankomat.sln
big_int/: big_int.sln
blur_cat/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-lesson_37_1-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
change_html/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
detector_png/: detector_png.sln  readme
diagonal_matrix/: diagonal_matrix.sln
e-mail/: e-mail.sln
elf_village/: CMakeLists.txt
elf_village_2.0/: CMakeLists.txt
elf_village_2.0/elf_village_2.0/: CMakeLists.txt  elf_village_2.0.cpp  elf_village_2.0.h  main.cpp
example28.1/: CMakeLists.txt
example28.1/example28.1/: CMakeLists.txt  example28.1.cpp  example28.1.h
fishing/: fishing.sln
game_What_Where_When/: game_What_Where_When.sln
game_additional_task/: game_additional_task.sln
geometric_figures/: CMakeLists.txt
imagebutton/: imagebutton.cpp  imagebutton.h  imagebutton.pro  main.cpp
input output days of the week/: input output days of the week.sln
ip_validation/: ip.sln
jump/: jump.sln
jump_update/: jump_update.sln
lesson25/: CMakeLists.txt
lesson25/lesson25/: CMakeLists.txt
lesson25/lesson25/include/: lesson25.h
lesson25/lesson25/src/: CMakeLists.txt  lesson25.cpp
lesson29.1/: CMakeLists.txt
lesson29.1/lesson29.1/: CMakeLists.txt  lesson29.1.cpp  lesson29.1.h  main.cpp
lesson29.2/: CMakeLists.txt
lesson29.2/lesson29.2/: CMakeLists.txt  Readme.txt  lesson29.2.cpp  lesson29.2.h  main.cpp
lesson30.1/: CMakeLists.txt
lesson30.1/lesson30.1/: CMakeLists.txt  lesson30.1.cpp  lesson30.1.h
lesson30_1/: CMakeLists.txt
lesson30_1/lesson30_1/: CMakeLists.txt  Readme.txt  lesson30_1.cpp  lesson30_1.h
lesson30_2/: CMakeLists.txt  Readme.txt
lesson30_3/: CMakeLists.txt  readme.txt
lesson30_3/lesson30_3/: CMakeLists.txt  lesson30_3.cpp
lesson_28_1/: CMakeLists.txt
lesson_28_1/lesson_28_1/: CMakeLists.txt  lesson_28_1.cpp  xlam.txt
lesson_28_2/: CMakeLists.txt
lesson_28_2/lesson_28_2/: CMakeLists.txt  lesson_28_2.cpp  lesson_28_2.h
lesson_28_3/: CMakeLists.txt
lesson_28_3/lesson_28_3/: CMakeLists.txt  lesson_28_3.cpp  lesson_28_3.h  main.cpp
lesson_31_1/: CMakeLists.txt  readme.txt
lesson_31_2/: CMakeLists.txt
lesson_31_2/lesson_31_2/: CMakeLists.txt  igraph.h  lesson_31_2.cpp  lesson_31_2.h  main.cpp
lesson_31_2_1/: CMakeLists.txt
lesson_32_0/: CMakeLists.txt
lesson_32_0/lesson_32_0/: CMakeLists.txt  lesson_32_0.cpp
lesson_32_1/: CMakeLists.txt
lesson_32_1/lesson_32_1/: CMakeLists.txt  film.json  lesson_32_1.cpp  lesson_32_1.h
lesson_32_2/: CMakeLists.txt
lesson_32_2/lesson_32_2/: CMakeLists.txt  films.json  lesson_32_2.cpp  readme.txt
lesson_32_3/: CMakeLists.txt
lesson_33_1/: CMakeLists.txt  readme.txt
lesson_33_1/lesson_33_1/: CMakeLists.txt  lesson_33_1.cpp  shop.cpp  shop.h
lesson_33_2/: CMakeLists.txt  readme.txt
lesson_33_3/: CMakeLists.txt
lesson_33_4/: CMakeLists.txt
lesson_35_1/: CMakeLists.txt
lesson_35_2/: CMakeLists.txt  readme.txt
lesson_35_3/: CMakeLists.txt
lesson_36/: colorfulcircle.cpp  colorfulcircle.h  lesson_36.pro  main.cpp
lesson_36_1/: 1.pro  main.cpp
lesson_37/: calculator.cpp  calculator.h  lesson_37_1.pro  main.cpp
matrix-vector_multiplication/: matrix-vector_multiplication.sln
matrix_equality/: matrix_equality.sln
mechanica_piano/: mechanica_piano.sln
mobile_phone/: CMakeLists.txt
mobile_phone/mobile_phone/: CMakeLists.txt  main.cpp  mobile_phone.cpp  mobile_phone.h
multidimensional arrays/: multidimensional arrays.sln
pupyrka/: pupyrka.sln
qtVideoPlayer/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qtVideoPlayer.pro  resources.qrc
rand_picture/: rand_picture.sln
rect_anim/: main.qml
reg_app/: mainwindow.cpp  mainwindow.h  mainwindow.ui
remote_control/: main.cpp  remote_control.cpp  remote_control.h  remote_control.pro
row_of_num/: row_of_num.sln
sea_battle/: sea_battle.sln
season/: season.sln
simulator_company/: CMakeLists.txt
simulator_company/simulator_company/: CMakeLists.txt  main.cpp  simulator_company.cpp  simulator_company.h
skillbox17.4.1/: skillbox17.4.1.sln
skillbox17.4.2/: skillbox17.4.2.sln
skillbox17.4.3/: skillbox17.4.3.sln
skillbox_15.6.1/: skillbox_15.6.1.sln
skillbox_15.6.2/: skillbox_15.6.2.sln
statement/: statement.sln
(+262 files in other folders)
