# CMakeList.txt: проект CMake для PC_Simulator; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
project(PC_Simulator)

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory(src)
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
