# CMakeList.txt: проект CMake для elf_village_2.0; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (elf_village_2.0 "elf_village_2.0.cpp" "elf_village_2.0.h" "main.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
