# CMakeList.txt: проект CMake для example28.1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (example28.1 "example28.1.cpp" "example28.1.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
