# CMakeList.txt: проект CMake для lesson29.1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lesson29.1 "lesson29.1.cpp" "lesson29.1.h" "main.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
