# CMakeList.txt: проект CMake для lesson29.2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lesson29.2 "lesson29.2.cpp" "lesson29.2.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
