# CMakeList.txt: проект CMake для lesson_31_2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lesson_31_2  "listgraph.h"  "matrixigraph.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
