# CMakeList.txt: проект CMake для lesson_33_1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lesson_33_1 "lesson_33_1.cpp" "shop.h" "shop.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
